--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <h1>jQuery Animation</h1>
+    <h1>jQuery Animate functions</h1>
     <div class="box">a box</div>
 
     <div id="navArrows">
