--- a/index.html
+++ b/index.html
@@ -21,14 +21,17 @@
 
 
     <!-- Load the CDN First -->
-    <script src="//code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous">
+    </script>
 
     <!-- If CDN fails to load, serve up the local version -->
-    <script>
-        window.jQuery || document.write('<script src="js/jquery-3.2.1.js "><\/script>;
-    </script>
-    <script src="js/jquery-3.2.1.js "></script>
-    <script src="js/script.js "></script>
+    < script>
+        window.jQuery || document.write('
+        <script src="js/jquery-3.2.1.js ">
+            < \/script>;
+        </script>
+        <script src="js/jquery-3.2.1.js "></script>
+        <script src="js/script.js "></script>
 </body>
 
 </html>
