--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <link href="css/normalize.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -21,17 +22,10 @@
 
 
     <!-- Load the CDN First -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous">
-    </script>
 
     <!-- If CDN fails to load, serve up the local version -->
-    < script>
-        window.jQuery || document.write('
-        <script src="js/jquery-3.2.1.js ">
-            < \/script>;
-        </script>
-        <script src="js/jquery-3.2.1.js "></script>
-        <script src="js/script.js "></script>
+
+    <script src="js/script.js "></script>
 </body>
 
 </html>
